Fixed theme overwriting and stretching the logo

--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -141,12 +141,12 @@
  * Component: Images
  * -------------------------------------------------------------------------- */
 
-img {
+.rounded {
   border-radius: 12px;
   width: 100%;
 }
 
-.pixelated-images img {
+.pixelated {
   image-rendering: pixelated;
   width: 100%;
 }
